[package]
name = "tauri-plugin-everything"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.0.0-rc.5" }
serde = "1.0"
thiserror = "1.0"
everything-rs = "0.1.9"
ts-rs = "6.2.1"
